samples/_failures_safe/1761705268_ff6f4a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6bd68ed9.c: In function ‘parser_expression’:
./samples/SAFE/__tmp_6bd68ed9.c:175:46: error: expected ‘)’ at end of input
  175 |     while (parser->current.type == TOKEN_PLUS
      |           ~                                  ^
      |                                              )
./samples/SAFE/__tmp_6bd68ed9.c:175:5: error: expected declaration or statement at end of input
  175 |     while (parser->current.type == TOKEN_PLUS
      |     ^~~~~
